<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- 第一组：主要功能 (单选组) -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
    </group>

    <!-- 第二组：内容分类 (带子菜单) -->
    <item android:title="@string/menu_categories">
        <menu>
            <item
                android:id="@+id/nav_music"

                android:title="@string/menu_music" />

            <item
                android:id="@+id/nav_movies"

                android:title="@string/menu_movies" />
        </menu>
    </item>

    <!-- 第三组：设置与帮助 (分割线上方) -->
    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_settings"

            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_help"

            android:title="@string/menu_help" />
    </group>

    <!-- 第四组：退出操作 (特殊样式) -->
    <item
        android:id="@+id/nav_logout"

        android:title="@string/menu_logout" />
</menu>