<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- 第一组：主要功能 (单选组) -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_login" />
    </group>

    <!-- 第二组：设置与帮助 -->
    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_manual"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_settings" />
    </group>


</menu>